# hpc_create_networks

./: .gitignore  PAWN_analysis.py  PAWN_analysis.sh  PAWN_metrics.sh  aggregate_pawn_metrics.py  analyse_PAWN.py  calibrate.py  commands.txt  compute_metrics.py  generate_single_network.py  launch_tasks.sh  my_communities.json  network_metrics.py  network_metrics.sh  parameter_search.py  parameter_search.sh  pilot_grid.py  pyproject.toml  run_calibrate.sh  run_pilot.sh  run_sweep.sh  run_task.py  seeding_experiments.py  seeding_experiments_memory.py  submit_job.sh  test.sh  test_640.out  test_875.out  test_876.out  test_simple.sh  test_submit.sh  tmux_submit.sh
asnu/: __init__.py
logs/: create_641_0.out  create_641_1.out  create_641_10.out  create_641_11.out  create_641_12.out  create_641_13.out  create_641_14.out  create_641_15.out  create_641_16.out  create_641_17.out  create_641_18.out  create_641_19.out  create_641_2.out  create_641_20.out  create_641_21.out  create_641_22.out  create_641_23.out  create_641_24.out  create_641_25.out  create_641_26.out  create_641_27.out  create_641_28.out  create_641_29.out  create_641_3.out  create_641_30.out  create_641_31.out  create_641_32.out  create_641_33.out  create_641_34.out  create_641_35.out  create_641_36.out  create_641_37.out  create_641_38.out  create_641_39.out  create_641_4.out  create_641_40.out  create_641_41.out  create_641_42.out  create_641_43.out  create_641_44.out  (+408 more)
network_generation_scripts/: generate_enriched_network.py  generate_enriched_networks.py  generate_multiplex.py  generate_networks.py  (+3 more)
(+8 files in other folders)
