[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asnu"
version = "0.1.0"
description = "Aggregated Social Network Unfolder - Generate large-scale population-based networks"
license = { text = "MIT" }
authors = [
    { name = "Kamiel Gulpen" }
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "igraph>=0.11.8",
    "rustworkx>=0.15.1",
    "maturin>=1.11.5",
    "tqdm>=4.67.3",
    "numba>=0.58.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kamielgulpen/asnu"
Documentation = "https://github.com/kamielgulpen/asnu#readme"
Repository = "https://github.com/kamielgulpen/asnu"
Issues = "https://github.com/kamielgulpen/asnu/issues"
